Fixed styles for img height on small screens

--- a/dev/stylus/common/modal.styl
+++ b/dev/stylus/common/modal.styl
@@ -15,7 +15,7 @@
   margin  0 0 pad-xs 0
 
   img
-    height 24px
+    max-height 24px
 
 .fitplan-planning-modal-title
   font-weight bold
