--- a/dev/stylus/common/planning.styl
+++ b/dev/stylus/common/planning.styl
@@ -55,7 +55,7 @@
 
     img
       display block
-      height 24px
+      max-height 24px
       margin 0 auto
 
   .fitplan-planning-item-title
